--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One|Oswald:300" rel="stylesheet" type="text/css">
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css' rel='stylesheet'/>
 <!-- <link href="https://katiewrennhansen.github.io/modernist-redesign/css/css2/default.css" media="screen" rel="stylesheet" type="text/css"> -->
-<link href="file:///Users/kawrenn/Desktop/nc_modernist/default.css" media="screen" rel="stylesheet" type="text/css">
+<link href="file:///Users/kawrenn/Desktop/nc_modernist/css/default.css" media="screen" rel="stylesheet" type="text/css">
 <link href="css/css2/animate.css" media="screen" rel="stylesheet" type="text/css">
 <link href="css/css2/nivo-lightbox.css" media="screen" rel="stylesheet" type="text/css">
 <link href="images/lightbox/default.css" media="screen" rel="stylesheet" type="text/css">
@@ -40,7 +40,7 @@ Design by: RTBWizards.com
         <div class="logo">
             <div class="brand">
                 <a href="https://www.ncmodernist.org/">
-                    <img height="73" src="file:///Users/kawrenn/Desktop/nc_modernist/nc_mod_logo.png" width="300">
+                    <img height="73" src="https://katiewrennhansen.github.io/nc-modernist-redesign/images/nc_mod_logo.png" width="300">
                 </a>
             </div>
             <div class="logo-subtext">Architecture You Love</div>
