--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One|Oswald:300" rel="stylesheet" type="text/css">
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css' rel='stylesheet'/>
-<!-- <link href="https://katiewrennhansen.github.io/modernist-redesign/css/css2/default.css" media="screen" rel="stylesheet" type="text/css"> -->
+<link href="https://katiewrennhansen.github.io/nc-modernist-redesign/css/default.css" media="screen" rel="stylesheet" type="text/css">
 <link href="file:///Users/kawrenn/Desktop/nc_modernist/css/default.css" media="screen" rel="stylesheet" type="text/css">
 <link href="css/css2/animate.css" media="screen" rel="stylesheet" type="text/css">
 <link href="css/css2/nivo-lightbox.css" media="screen" rel="stylesheet" type="text/css">
