add architects page, forsale page, search page, cassilly page

--- a/pages/forsale.html
+++ b/pages/forsale.html
@@ -4,17 +4,16 @@
 <!-- #BeginTemplate "main.dwt" -->
 <head>
 <base href="https://www.ncmodernist.org/">
-<title>NCModernist</title>
 <meta charset="UTF-8">
 <!-- #BeginEditable "description" -->
 <meta content="NCModernist" name="NCModernist">
-
 <!-- #EndEditable -->
+<title>NCModernist</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One|Oswald:300" rel="stylesheet" type="text/css">
-<link href="https://katiewrennhansen.github.io/nc-modernist-redesign/css/default.css" media="screen" rel="stylesheet" type="text/css">
-<!-- <link href="file:///Users/kawrenn/Desktop/nc_modernist/css/default.css" media="screen" rel="stylesheet" type="text/css"> -->
-<link href="css/css2/default.css" media="screen" rel="stylesheet" type="text/css">
+<!-- <link href="https://katiewrennhansen.github.io/nc-modernist-redesign/css/default.css" media="screen" rel="stylesheet" type="text/css"> -->
+<link href="file:///Users/kawrenn/Desktop/nc_modernist/css/default.css" media="screen" rel="stylesheet" type="text/css">
+<!-- <link href="css/css2/default.css" media="screen" rel="stylesheet" type="text/css"> -->
 <link href="css/css2/animate.css" media="screen" rel="stylesheet" type="text/css">
 <link href="css/css2/nivo-lightbox.css" media="screen" rel="stylesheet" type="text/css">
 <link href="images/lightbox/default.css" media="screen" rel="stylesheet" type="text/css">
@@ -88,77 +87,104 @@ Design by: RTBWizards.com
                 <li><a href="https://www.usmodernist.org/speaker.htm">Speaker</a></li>
                 <li><a href="https://www.usmodernist.org/aboutus.htm">About</a></li>
             </ul>
-        <li><a class="donate-btn" href="https://www.usmodernist.org/donate.htm">Donate</a></li>
-      </ul>
+            <li><a class="donate-btn" href="https://www.usmodernist.org/donate.htm">Donate</a></li>
+        </ul>
       </nav>
    </div>
 </header>
 <!-- ==== page title ==== -->
-<main class="row1">
-    <div class="container pageTitle">
-        <div class="inside">
+<div class="row1">
+   <div class="container pageTitle">
+      <div class="inside">
          <!-- #BeginEditable "pagetitle" -->
-            <section>
-                <div class="landing-img"></div>
-
-                <p class="extra-small home-text left center">The 1954 Eduardo Fernando Catalano House in Raleigh NC (sadly destroyed), 
-                    North Carolina's second most famous house after Biltmore. From left to right, some of the many kids who loved it: Smitty, Ginny, Bev, Pam, and Marty in a photo by 
-                    legendary architecture photographer Ezra Stoller.
+		    <a href="https://www.ncmodernist.org/architects.html">
+                <img height="166" src="NCM-forsale-1.jpg" width="200">
+            </a>
+            <p class="auto-style43">
+                <iframe id="I1" allowfullscreen="" class="auto-style13" name="I1" src="https://www.youtube.com/embed/3_GJYoAMaH8" style="width: 389px; height: 197px"></iframe>
+            </p>
+            <p>Welcome to NCModernist's exclusive statewide list of Modernist houses on the market. Volunteers maintain the list, so no warranties of accuracy or availability are expressed or implied. Support for this project generously provided by:</p>
+            <div class="center">
+                <br>
+                <a href="http://www.angelaroehl.com">
+                    <img apple-height="yes" apple-inline="yes" apple-width="yes" height="300" src="roehlad-2020b.png" v:shapes="_x0034_9B3FE1A-EBAE-4C92-AB35-C93BBD2EC2DE" width="200">
+                </a>
+                <a href="https://www.chappellres.com/modern">
+                    <img height="300" src="chappell.jpg" width="200">
+                </a>
+                <a href="https://mariannemansourrealtor.kw.com/">
+                    <img height="300" src="mansour-1.jpg" width="200">
+                </a>
+                <br />
+                <a href="https://www.birdsongraleigh.com">
+                    <img height="300" src="birdsong-ad.jpg" width="200">
+                </a>
+                <a href="https://www.modhomesrealty.com/Home">
+                    <img height="296" src="2020%20ModAd%20(003).jpg" width="200">
+                </a> 
+                <a href="https://www.marriott.com/hotels/travel/rduis-sheraton-imperial-hotel-raleigh-durham-airport-at-research-triangle-park">
+                    <img src="sheraton.jpg" height="300" width="200">
+                </a>
+                <br />
+                <a href="https://www.1300MasonFarmRoad.com">
+                    <img height="199" src="rszostak-ad.jpg" v:shapes="_x0037_19311F6F39F4B44A90252E51BC2C935_x0040_namprd11.prod.outlook.com" width="300">
+                </a>
+                <br />
+                <a href="https://www.propertyshark.com/" target="_blank">
+                    <img alt="Shark" class="auto-style35" src="propertyshark.png" height="67" width="207" />
+                </a>
+                <p class="auto-style43">    
+                    <a href="https://docs.google.com/spreadsheets/d/1Q8YOJmVvfeUR1USGV92m2FXFSCrwLRbdRNO86PXYYnk/edit?usp=sharing">
+                        <img class="auto-style13" src="browse-button.png" width="194" height="77" />
+                    </a>
+                    <br>
                 </p>
-                <p class="left">Who knew? North Carolina is one of the largest concentrations of Modernist houses in America! NCModernist is a 501C3 nonprofit educational archive providing donors, volunteers, and advocates information and organization to document, preserve, and promote North Carolina&rsquo;s legacy of exceptional residential Modernist architecture.</p>
-            </section>
-                    
-            <table class="icon-table">
-                <tr>
-                    <td class="center">
-                        <a href="http://www.ncmodernist.org/architects.html">
-                            <img height="70" src="https://www.usmodernist.org/gallery%20(002).png" width="70" class="auto-style5">
-                        </a>
-                    </td>
-                    <td class="center">
-                        <a href="http://www.ncmodernist.org/library.htm">
-                            <img height="70" src="https://www.usmodernist.org/library1%20(002).png" width="70" class="auto-style5" >
-                        </a>
-                    </td>
-                    <td class="center">
-                        <a href="http://www.ncmodernist.org/forsale.html">
-                            <img height="70" src="https://www.usmodernist.org/travel%20(002).png" width="70" class="auto-style5">
-                        </a>
-                    </td>
-                    <td class="center">
-                        <a href="http://www.usmodernist.org/usmodernistradio.htm">
-                            <img height="70" src="https://www.usmodernist.org/microphone-icon.jpg" width="70" class="auto-style11">
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>NC Architects and Designers</td>
-                    <td>NC Library</td>
-                    <td>NC Modernist Houses For Sale</td>
-                    <td>US Modernist Radio Podcast</td>
-                </tr>
-            </table>
+            </div>
 
             <section class="border-top">
-                <h2 class="center">Underwriting Sponsors</h2>
-                <div>
-                    <a href="http://www.angelaroehl.com">
-                        <img apple-height="yes" apple-inline="yes" apple-width="yes" height="300" src="roehlad-2020b.png" v:shapes="_x0034_9B3FE1A-EBAE-4C92-AB35-C93BBD2EC2DE" width="200">
-                    </a>
-                    <a href="https://www.modhomesrealty.com/Home">
-                        <img height="300" src="2020%20ModAd%20(003).jpg" width="202" />
-                    </a> 
-                    <a href="https://www.cqchome.com">
-                        <img height="300" src="CQC-WebAd.jpg" width="200" />
-                    </a>
-                    <a href="http://www.ncmodernist.org/triangle.htm">
-                        <img height="300" src="tmacover.jpg" width="366">
-                    </a>
-                </div>
+                <p class="left">
+                    <img alt="Dozer" height="165" src="dozer.jpg" style="float: left; margin-right: 20px;" width="179" />
+                    <h4 class="left">Mid-Century Modernist Houses are Endangered!</h4>
+                </p>
+                <p class="left">When bulldozers are on the way to Modernist houses, people tend to blame developers - which is unfair. Developers come only after many opportunities to save a house have been ignored. The real enemies: vacancy, time, and unrealistic selling prices. </p>
+                <p class="left">When homes are vacant, they decay faster. They are more susceptible to weather and vandalism when no one is around to care. Without active owners (or tenants), vacant houses suffer a slow, painful deterioration often resulting in demolition. </p>
+                <p class="left">We preserve North Carolina Modernist houses by keeping them occupied. As part of our ongoing mission of preservation, this list reduces time on the market and gets these Modernist houses the caring occupants they deserve - faster. </p>
             </section>
 
             <section class="border-top">
-                <p class="left">NCModernist is an influential community of architecture fans continually hosting wildly popular Modernist events, giving thousands of people access to the most exciting residential architecture past and present. We are the oldest and largest group dedicated to Modernist residential design in North Carolina.</p>
+                <p class="left">
+                    <strong>Submit a Modernist House For Sale or Rent:</strong>
+                    Write NCModernist volunteer Virginia Faust at				
+                    <a class="hover-link" href="mailto:vafaust@gmail.com">vafaust@gmail.com</a>
+                    with the following information:
+                </p>
+                <ul>
+                    <li class="left">
+                        <p class="left">Name of Original Homeowner, if known for sure (don't guess).</p>
+                    </li>
+                    <li class="left">
+                        <p class="left">Year House Completed, if known for sure (don't guess)</p>
+                    </li>
+                    <li>
+                        <p class="left">Address (number, street, city, state, zip)</p>
+                    </li>
+                    <li>
+                        <p class="left">Original Architect's Name, if known for sure (don't guess). Same for the builder.</p>
+                    </li>
+                    <li>
+                        <p class="left">Current Homeowner Name and Phone Number (for us to ask historical questions if necessary)</p>
+                    </li>
+                    <li>
+                        <p class="left">Sales/rental Price</p>
+                    </li>
+                    <li>
+                        <p class="left">MLS Link (if any), or Contact Info if For Sale By Owner. If not part of an MLS link, please attach photos, at least two of the inside and two from the outside.</p>
+                    </li>
+                    <li>
+                        <p class="left">Any other comments about the house, the architect, or house history.</p>
+                    </li>
+                </ul>
+                <p>All submissions are subject to review and approval is not guaranteed.</p>
             </section>
          <!-- #EndEditable -->
         </div>
