--- a/pages/search.htm
+++ b/pages/search.htm
@@ -1,20 +1,21 @@
 
 <!DOCTYPE html>
 <html>
+
 <!-- #BeginTemplate "main.dwt" -->
+
 <head>
 <base href="https://www.ncmodernist.org/">
-<title>NCModernist</title>
 <meta charset="UTF-8">
 <!-- #BeginEditable "description" -->
-<meta content="NCModernist" name="NCModernist">
+<title>NCModernist | Search</title>
 
 <!-- #EndEditable -->
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One|Oswald:300" rel="stylesheet" type="text/css">
 <link href="https://katiewrennhansen.github.io/nc-modernist-redesign/css/default.css" media="screen" rel="stylesheet" type="text/css">
 <!-- <link href="file:///Users/kawrenn/Desktop/nc_modernist/css/default.css" media="screen" rel="stylesheet" type="text/css"> -->
-<link href="css/css2/default.css" media="screen" rel="stylesheet" type="text/css">
+<!-- <link href="css/css2/default.css" media="screen" rel="stylesheet" type="text/css"> -->
 <link href="css/css2/animate.css" media="screen" rel="stylesheet" type="text/css">
 <link href="css/css2/nivo-lightbox.css" media="screen" rel="stylesheet" type="text/css">
 <link href="images/lightbox/default.css" media="screen" rel="stylesheet" type="text/css">
@@ -88,82 +89,51 @@ Design by: RTBWizards.com
                 <li><a href="https://www.usmodernist.org/speaker.htm">Speaker</a></li>
                 <li><a href="https://www.usmodernist.org/aboutus.htm">About</a></li>
             </ul>
-        <li><a class="donate-btn" href="https://www.usmodernist.org/donate.htm">Donate</a></li>
-      </ul>
+            <li><a class="donate-btn" href="https://www.usmodernist.org/donate.htm">Donate</a></li>
+        </ul>
       </nav>
    </div>
 </header>
 <!-- ==== page title ==== -->
-<main class="row1">
-    <div class="container pageTitle">
-        <div class="inside">
+<div class="row1">
+   <div class="container pageTitle">
+      <div class="inside">
          <!-- #BeginEditable "pagetitle" -->
-            <section>
-                <div class="landing-img"></div>
+          <table cellpadding="3" cellspacing="3">
+			<tr>
+			<h1>Site Search</h1>
 
-                <p class="extra-small home-text left center">The 1954 Eduardo Fernando Catalano House in Raleigh NC (sadly destroyed), 
-                    North Carolina's second most famous house after Biltmore. From left to right, some of the many kids who loved it: Smitty, Ginny, Bev, Pam, and Marty in a photo by 
-                    legendary architecture photographer Ezra Stoller.
-                </p>
-                <p class="left">Who knew? North Carolina is one of the largest concentrations of Modernist houses in America! NCModernist is a 501C3 nonprofit educational archive providing donors, volunteers, and advocates information and organization to document, preserve, and promote North Carolina&rsquo;s legacy of exceptional residential Modernist architecture.</p>
-            </section>
-                    
-            <table class="icon-table">
-                <tr>
-                    <td class="center">
-                        <a href="http://www.ncmodernist.org/architects.html">
-                            <img height="70" src="https://www.usmodernist.org/gallery%20(002).png" width="70" class="auto-style5">
-                        </a>
-                    </td>
-                    <td class="center">
-                        <a href="http://www.ncmodernist.org/library.htm">
-                            <img height="70" src="https://www.usmodernist.org/library1%20(002).png" width="70" class="auto-style5" >
-                        </a>
-                    </td>
-                    <td class="center">
-                        <a href="http://www.ncmodernist.org/forsale.html">
-                            <img height="70" src="https://www.usmodernist.org/travel%20(002).png" width="70" class="auto-style5">
-                        </a>
-                    </td>
-                    <td class="center">
-                        <a href="http://www.usmodernist.org/usmodernistradio.htm">
-                            <img height="70" src="https://www.usmodernist.org/microphone-icon.jpg" width="70" class="auto-style11">
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>NC Architects and Designers</td>
-                    <td>NC Library</td>
-                    <td>NC Modernist Houses For Sale</td>
-                    <td>US Modernist Radio Podcast</td>
-                </tr>
-            </table>
+				<td class="auto-style10"><span class="center">Tip: for a 
+				more specific search, put phrases in quotes. For example:
+				</span><br class="center" />
+				<br class="center" />
+				<span class="center">"brian shawcroft" architect glenwood</span><br class="center" />
+				</td>
+			</tr>
+			
+			<form class="form-inline">
+			<div class="form-group">
 
-            <section class="border-top">
-                <h2 class="center">Underwriting Sponsors</h2>
-                <div>
-                    <a href="http://www.angelaroehl.com">
-                        <img apple-height="yes" apple-inline="yes" apple-width="yes" height="300" src="roehlad-2020b.png" v:shapes="_x0034_9B3FE1A-EBAE-4C92-AB35-C93BBD2EC2DE" width="200">
-                    </a>
-                    <a href="https://www.modhomesrealty.com/Home">
-                        <img height="300" src="2020%20ModAd%20(003).jpg" width="202" />
-                    </a> 
-                    <a href="https://www.cqchome.com">
-                        <img height="300" src="CQC-WebAd.jpg" width="200" />
-                    </a>
-                    <a href="http://www.ncmodernist.org/triangle.htm">
-                        <img height="300" src="tmacover.jpg" width="366">
-                    </a>
-                </div>
-            </section>
-
-            <section class="border-top">
-                <p class="left">NCModernist is an influential community of architecture fans continually hosting wildly popular Modernist events, giving thousands of people access to the most exciting residential architecture past and present. We are the oldest and largest group dedicated to Modernist residential design in North Carolina.</p>
-            </section>
+<script>
+  (function() {
+    var cx = '017999698976765921126:h8j4r_mpgzg';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
+</div>
+			</form>
+			</table>
          <!-- #EndEditable -->
-        </div>
-    </div>
-</main>
+      </div>
+   </div>
+</div>
 <!-- ==== footer area ==== -->
 <footer>
     <div class="container">
