--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One|Oswald:300" rel="stylesheet" type="text/css">
 <link href="https://katiewrennhansen.github.io/nc-modernist-redesign/css/default.css" media="screen" rel="stylesheet" type="text/css">
 <!-- <link href="file:///Users/kawrenn/Desktop/nc_modernist/css/default.css" media="screen" rel="stylesheet" type="text/css"> -->
-<link href="css/css2/default.css" media="screen" rel="stylesheet" type="text/css">
+<!-- <link href="css/css2/default.css" media="screen" rel="stylesheet" type="text/css"> -->
 <link href="css/css2/animate.css" media="screen" rel="stylesheet" type="text/css">
 <link href="css/css2/nivo-lightbox.css" media="screen" rel="stylesheet" type="text/css">
 <link href="images/lightbox/default.css" media="screen" rel="stylesheet" type="text/css">
