--- a/pages/cassilly.htm
+++ b/pages/cassilly.htm
@@ -109,7 +109,7 @@ Design by: RTBWizards.com
         </p>
     </div>
    <div class="container pageTitle">
-      <div class="inside">
+      <div class="inside hover-class">
          <!-- #BeginEditable "pagetitle" -->
 
 <div>
