--- a/pages/architects.html
+++ b/pages/architects.html
@@ -43,51 +43,51 @@ Design by: RTBWizards.com
             <div class="logo-subtext">Architecture You Love</div>
         </div>
    <!-- ==== Main Navigation ==== -->
-            <nav>
-      <ul class="slimmenu">
-         <li><a>Search/Home</a>
-            <ul>
-                <li><a href="https://www.ncmodernist.org/search.htm">Search Site</a></li>
-                <li><a href="https://www.ncmodernist.org/">Home</a></li>
-            </ul>
-         </li>
-         <li><a>North Carolina</a>
-            <ul>
-                <li><a href="architects.html">NC Architects</a></li>
-                <li><a href="forsale.html">For Sale</a></li>
-                <li><a href="videos.htm">Videos</a></li>
-                <li><a href="https://www.usmodernist.org/resources.htm">Resources</a></li>
-            </ul>
-         </li>
-         <li><a>Events</a>
-            <ul>
-                <li><a href="https://www.usmodernist.org/tours.htm">Tours</a></li>
-                <li><a href="t4a.htm">Thirst4Architecture</a></li>
-                <li><a href="movies.htm">Movie Series</a></li>
-                <li><a href="matsumotoprize.htm">Matsumoto Prize</a></li>
-                <li><a href="bauhow.htm">Project Bauhow</a></li>
-                <li><a href="pastevents.htm">Past Events</a></li>
-            </ul>
-         </li>
-         <li><a>Get Involved</a>
-            <ul>
-                <li><a href="https://us4.list-manage.com/subscribe?u=d2a3e0b26c6dab3b4c52983a0&id=2e7fd6b32c">Get Newsletter</a></li>
-                <li><a href="https://www.usmodernist.org/modsquad.htm">Join Mod Squad</a></li>
-                <li><a href="https://www.usmodernist.org/sponsor.htm">Sponsor</a></li>
-                <li><a href="https://www.usmodernist.org/volunteer.htm">Volunteer</a></li>
-                <li><a href="ldf.htm">Legal Defense Fund</a></li>
-            </ul>
-         </li>
-         <li><a>About</a>
-            <ul>
-                <li><a href="https://www.usmodernist.org/awards.htm">Awards</a></li>
-                <li><a href="https://www.usmodernist.org/media.htm">Media</a></li>
-                <li><a href="https://www.usmodernist.org/speaker.htm">Speaker</a></li>
-                <li><a href="https://www.usmodernist.org/aboutus.htm">About</a></li>
-            </ul>
-            <li><a class="donate-btn" href="https://www.usmodernist.org/donate.htm">Donate</a></li>
-        </ul>
-      </nav>
+   <nav>
+    <ul class="slimmenu">
+       <li><a>Search/Home</a>
+          <ul>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/search.htm">Search Site</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/">Home</a></li>
+          </ul>
+       </li>
+       <li><a>North Carolina</a>
+          <ul>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/architects.html">NC Architects</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/forsale.html">For Sale</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/videos.htm">Videos</a></li>
+              <li><a href="https://www.usmodernist.org/resources.htm">Resources</a></li>
+          </ul>
+       </li>
+       <li><a>Events</a>
+          <ul>
+              <li><a href="https://www.usmodernist.org/tours.htm">Tours</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/t4a.htm">Thirst4Architecture</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/movies.htm">Movie Series</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/matsumotoprize.htm">Matsumoto Prize</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/bauhow.htm">Project Bauhow</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/pastevents.htm">Past Events</a></li>
+          </ul>
+       </li>
+       <li><a>Get Involved</a>
+          <ul>
+              <li><a href="https://us4.list-manage.com/subscribe?u=d2a3e0b26c6dab3b4c52983a0&id=2e7fd6b32c">Get Newsletter</a></li>
+              <li><a href="https://www.usmodernist.org/modsquad.htm">Join Mod Squad</a></li>
+              <li><a href="https://www.usmodernist.org/sponsor.htm">Sponsor</a></li>
+              <li><a href="https://www.usmodernist.org/volunteer.htm">Volunteer</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/ldf.htm">Legal Defense Fund</a></li>
+          </ul>
+       </li>
+       <li><a>About</a>
+          <ul>
+              <li><a href="https://www.usmodernist.org/awards.htm">Awards</a></li>
+              <li><a href="https://www.usmodernist.org/media.htm">Media</a></li>
+              <li><a href="https://www.usmodernist.org/speaker.htm">Speaker</a></li>
+              <li><a href="https://www.usmodernist.org/aboutus.htm">About</a></li>
+          </ul>
+      <li><a class="donate-btn" href="https://www.usmodernist.org/donate.htm">Donate</a></li>
+    </ul>
+    </nav>
    </div>
 </header>
 <!-- ==== page title ==== -->
@@ -98,7 +98,7 @@ Design by: RTBWizards.com
 		<h1>NC Residential<br>Architects + Designers</h1>
         <p>Photos are the most active</p> 
         <p>Houses not listed by architect are listed by city: </p>
-        <p class="hover-class architect-locations">
+        <p class="hover-class spaced-links">
             <a href="https://www.ncmodernist.org/raleigh.htm">Raleigh</a> 
             | <a href="https://www.ncmodernist.org/durham.htm">Durham</a> 
             | <a href="https://www.ncmodernist.org/chapelhill.htm">Chapel Hill</a> 
@@ -122,7 +122,7 @@ Design by: RTBWizards.com
             <td><a href="https://www.ncmodernist.org/alphin.htm"><img src="alphin5.jpg" alt="Will Alphin" width="84" height="110" /></a><br >Will<br />Alphin</td>
             <td><a href="https://www.ncmodernist.org/arneson.htm"><img src="arneson-photo.jpg" alt="Arneson" width="84" height="110" /></a><br />David<br />Arneson</td>
             <td><a href="https://www.ncmodernist.org/berghausen.htm"><img src="berghausen-photo-2.jpg" width="84" height="110" /></a><br />Sasha<br />Berghausen</td>
-            <td><a href="https://www.ncmodernist.org/cassilly.htm"><img src="archit8.jpg" alt="Cassilly" width="84" height="110" /></a><br /> Ellen<br />Cassilly</td>
+            <td><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/cassilly.htm"><img src="archit8.jpg" alt="Cassilly" width="84" height="110" /></a><br /> Ellen<br />Cassilly</td>
             <td><a href="https://www.ncmodernist.org/cherry.htm"><img src="cherry-photo-3.jpg" width="84" height="110" /></a><br /> Louis<br />Cherry</td>
             <td><a href="https://www.ncmodernist.org/dixon.htm"><img src="archit3.jpg" width="84" height="110" /></a><br /> Dail<br />Dixon</td>
             <td><a href="https://www.ncmodernist.org/dyer.htm"><img height="113" src="dyer-photo.jpg" width="89" /></a><br> Katie<br>Dyer</td>
