--- a/pages/cassilly.htm
+++ b/pages/cassilly.htm
@@ -30,13 +30,7 @@
 Design by: RTBWizards.com
 **************************
 -->
-<style type="text/css">
 
-.auto-style1 {
-	color: #fff;
-	text-align: center;
-}
-</style>
 </head>
 
 <body>
@@ -53,51 +47,51 @@ Design by: RTBWizards.com
             <div class="logo-subtext extra-space">Architecture You Love</div>
         </div>
    <!-- ==== Main Navigation ==== -->
-            <nav>
-      <ul class="slimmenu">
-         <li><a>Search/Home</a>
-            <ul>
-                <li><a href="https://www.ncmodernist.org/search.htm">Search Site</a></li>
-                <li><a href="https://www.ncmodernist.org/">Home</a></li>
-            </ul>
-         </li>
-         <li><a>North Carolina</a>
-            <ul>
-                <li><a href="architects.html">NC Architects</a></li>
-                <li><a href="forsale.html">For Sale</a></li>
-                <li><a href="videos.htm">Videos</a></li>
-                <li><a href="https://www.usmodernist.org/resources.htm">Resources</a></li>
-            </ul>
-         </li>
-         <li><a>Events</a>
-            <ul>
-                <li><a href="https://www.usmodernist.org/tours.htm">Tours</a></li>
-                <li><a href="t4a.htm">Thirst4Architecture</a></li>
-                <li><a href="movies.htm">Movie Series</a></li>
-                <li><a href="matsumotoprize.htm">Matsumoto Prize</a></li>
-                <li><a href="bauhow.htm">Project Bauhow</a></li>
-                <li><a href="pastevents.htm">Past Events</a></li>
-            </ul>
-         </li>
-         <li><a>Get Involved</a>
-            <ul>
-                <li><a href="https://us4.list-manage.com/subscribe?u=d2a3e0b26c6dab3b4c52983a0&id=2e7fd6b32c">Get Newsletter</a></li>
-                <li><a href="https://www.usmodernist.org/modsquad.htm">Join Mod Squad</a></li>
-                <li><a href="https://www.usmodernist.org/sponsor.htm">Sponsor</a></li>
-                <li><a href="https://www.usmodernist.org/volunteer.htm">Volunteer</a></li>
-                <li><a href="ldf.htm">Legal Defense Fund</a></li>
-            </ul>
-         </li>
-         <li><a>About</a>
-            <ul>
-                <li><a href="https://www.usmodernist.org/awards.htm">Awards</a></li>
-                <li><a href="https://www.usmodernist.org/media.htm">Media</a></li>
-                <li><a href="https://www.usmodernist.org/speaker.htm">Speaker</a></li>
-                <li><a href="https://www.usmodernist.org/aboutus.htm">About</a></li>
-            </ul>
-            <li><a class="donate-btn" href="https://www.usmodernist.org/donate.htm">Donate</a></li>
-        </ul>
-      </nav>
+   <nav>
+    <ul class="slimmenu">
+       <li><a>Search/Home</a>
+          <ul>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/search.htm">Search Site</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/">Home</a></li>
+          </ul>
+       </li>
+       <li><a>North Carolina</a>
+          <ul>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/architects.html">NC Architects</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/forsale.html">For Sale</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/videos.htm">Videos</a></li>
+              <li><a href="https://www.usmodernist.org/resources.htm">Resources</a></li>
+          </ul>
+       </li>
+       <li><a>Events</a>
+          <ul>
+              <li><a href="https://www.usmodernist.org/tours.htm">Tours</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/t4a.htm">Thirst4Architecture</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/movies.htm">Movie Series</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/matsumotoprize.htm">Matsumoto Prize</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/bauhow.htm">Project Bauhow</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/pastevents.htm">Past Events</a></li>
+          </ul>
+       </li>
+       <li><a>Get Involved</a>
+          <ul>
+              <li><a href="https://us4.list-manage.com/subscribe?u=d2a3e0b26c6dab3b4c52983a0&id=2e7fd6b32c">Get Newsletter</a></li>
+              <li><a href="https://www.usmodernist.org/modsquad.htm">Join Mod Squad</a></li>
+              <li><a href="https://www.usmodernist.org/sponsor.htm">Sponsor</a></li>
+              <li><a href="https://www.usmodernist.org/volunteer.htm">Volunteer</a></li>
+              <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/ldf.htm">Legal Defense Fund</a></li>
+          </ul>
+       </li>
+       <li><a>About</a>
+          <ul>
+              <li><a href="https://www.usmodernist.org/awards.htm">Awards</a></li>
+              <li><a href="https://www.usmodernist.org/media.htm">Media</a></li>
+              <li><a href="https://www.usmodernist.org/speaker.htm">Speaker</a></li>
+              <li><a href="https://www.usmodernist.org/aboutus.htm">About</a></li>
+          </ul>
+      <li><a class="donate-btn" href="https://www.usmodernist.org/donate.htm">Donate</a></li>
+    </ul>
+    </nav>
    </div>
 </header>
 <!-- ==== page title ==== -->
