--- a/pages/matsumotoprize.htm
+++ b/pages/matsumotoprize.htm
@@ -104,7 +104,7 @@ Design by: RTBWizards.com
 
             <img height="496" src="NCM-mprize-1.jpg" style="padding-bottom: 20px" width="432" />
             <h4>Recognizing Excellence in North Carolina Modernist Residential Design</h4>
-            <p class="matsumoto-links">
+            <p class="spaced-links">
                 <a href="https://www.ncmodernist.org/prize2021.htm">2021</a> | 
                 <a href="https://www.ncmodernist.org/prize2020.htm">2020</a> | 
                 <a href="https://www.ncmodernist.org/prize2019.htm">2019</a> | 
