--- a/index.html
+++ b/index.html
@@ -50,26 +50,26 @@ Design by: RTBWizards.com
       <ul class="slimmenu">
          <li><a>Search/Home</a>
             <ul>
-                <li><a href="https://www.ncmodernist.org/search.htm">Search Site</a></li>
-                <li><a href="https://www.ncmodernist.org/">Home</a></li>
+                <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/search.htm">Search Site</a></li>
+                <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/">Home</a></li>
             </ul>
          </li>
          <li><a>North Carolina</a>
             <ul>
-                <li><a href="architects.html">NC Architects</a></li>
-                <li><a href="forsale.html">For Sale</a></li>
-                <li><a href="videos.htm">Videos</a></li>
+                <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/architects.html">NC Architects</a></li>
+                <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/forsale.html">For Sale</a></li>
+                <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/videos.htm">Videos</a></li>
                 <li><a href="https://www.usmodernist.org/resources.htm">Resources</a></li>
             </ul>
          </li>
          <li><a>Events</a>
             <ul>
                 <li><a href="https://www.usmodernist.org/tours.htm">Tours</a></li>
-                <li><a href="t4a.htm">Thirst4Architecture</a></li>
-                <li><a href="movies.htm">Movie Series</a></li>
-                <li><a href="matsumotoprize.htm">Matsumoto Prize</a></li>
-                <li><a href="bauhow.htm">Project Bauhow</a></li>
-                <li><a href="pastevents.htm">Past Events</a></li>
+                <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/t4a.htm">Thirst4Architecture</a></li>
+                <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/movies.htm">Movie Series</a></li>
+                <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/matsumotoprize.htm">Matsumoto Prize</a></li>
+                <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/bauhow.htm">Project Bauhow</a></li>
+                <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/pastevents.htm">Past Events</a></li>
             </ul>
          </li>
          <li><a>Get Involved</a>
@@ -78,7 +78,7 @@ Design by: RTBWizards.com
                 <li><a href="https://www.usmodernist.org/modsquad.htm">Join Mod Squad</a></li>
                 <li><a href="https://www.usmodernist.org/sponsor.htm">Sponsor</a></li>
                 <li><a href="https://www.usmodernist.org/volunteer.htm">Volunteer</a></li>
-                <li><a href="ldf.htm">Legal Defense Fund</a></li>
+                <li><a href="https://katiewrennhansen.github.io/nc-modernist-redesign/ldf.htm">Legal Defense Fund</a></li>
             </ul>
          </li>
          <li><a>About</a>
