--- a/pages/architects.html
+++ b/pages/architects.html
@@ -319,14 +319,15 @@ Design by: RTBWizards.com
         <tr>
             <td><a href="https://www.ncmodernist.org/allison.htm"><img src="alliso25.jpg" alt="Allison" width="84" height="110" /></a><br />Mark<br />Allison</td>
             <td><a href="https://www.ncmodernist.org/arnaudin.htm"><img src="arnaudin-photo.jpg" alt="NCModernist" width="99" height="114"/></a><br>Steve<br>Arnaudin</td>
+			<td><a href="https://www.ncmodernist.org/bonidy.htm"><img height="110" src="bonidy-photo-1.jpg" width="84"></a><br> Tab<br>Bonidy</td>
             <td><a href="https://www.ncmodernist.org/bryant.htm"><img src="bryant-photo-2.jpg" width="84" height="110"/></a><br />Nathan<br /> Bryant</td>
             <td><a href="https://www.ncmodernist.org/carlton.htm"><img src="carlton-photo-2.jpg" alt="Carlton" width="84" height="110" /></a><br />Rob<br />Carlton</td>
             <td><a href="https://www.ncmodernist.org/coffey.htm"><img src="coffey.jpg" alt="Coffey" width="84" height="110" /></a><br />Hunter<br />Coffey</td>
             <td><a href="https://www.ncmodernist.org/everhart.htm"><img src="https://www.ncmodernist.org/everhart-everhart.jpg" alt="Everhart" width="84" height="110" /></a><br />Chad<br />Everhart</td>
             <td><a href="https://www.ncmodernist.org/huebner.htm"><img src="huebner-photo-sm.png" alt="NCModernist" width="84" height="110" /></a><br />Scott<br>Huebner</td>
-            <td><a href="https://www.ncmodernist.org/mcpherson.htm"><img src="mcpherson-photo-2.jpg" width="84" height="110" /></a><br />Duncan<br /> McPherson</td>
         </tr>
         <tr>
+			<td><a href="https://www.ncmodernist.org/mcpherson.htm"><img src="mcpherson-photo-2.jpg" width="84" height="110" /></a><br />Duncan<br /> McPherson</td>
             <td> <a href="https://www.ncmodernist.org/pass.htm"><img src="pass-photo-1.jpg" alt="Pass" width="84" height="110" /></a><br />Brandon<br />Pass</td>
             <td> <a href="https://www.ncmodernist.org/rusafova.htm"><img src="rusafova-photo-1.jpg" alt="Rusafova" width="84" height="110" /></a><br> Maria<br />Rusafova</td>
             <td><a href="https://www.ncmodernist.org/siegman.htm"><img src="siegman-photo-2.jpg" alt="Siegman" width="84" height="110" /></a><br />Elihu<br />Siegman</td>
