--- a/pages/forsale.html
+++ b/pages/forsale.html
@@ -142,49 +142,49 @@ Design by: RTBWizards.com
             </div>
 
             <section class="border-top">
-                <p class="left">
+                <div class="left">
                     <img alt="Dozer" height="165" src="dozer.jpg" style="float: left; margin-right: 20px;" width="179" />
                     <h4 class="left">Mid-Century Modernist Houses are Endangered!</h4>
-                </p>
+                </div>
                 <p class="left">When bulldozers are on the way to Modernist houses, people tend to blame developers - which is unfair. Developers come only after many opportunities to save a house have been ignored. The real enemies: vacancy, time, and unrealistic selling prices. </p>
                 <p class="left">When homes are vacant, they decay faster. They are more susceptible to weather and vandalism when no one is around to care. Without active owners (or tenants), vacant houses suffer a slow, painful deterioration often resulting in demolition. </p>
                 <p class="left">We preserve North Carolina Modernist houses by keeping them occupied. As part of our ongoing mission of preservation, this list reduces time on the market and gets these Modernist houses the caring occupants they deserve - faster. </p>
             </section>
 
-            <section class="border-top">
-                <p class="left">
-                    <strong>Submit a Modernist House For Sale or Rent:</strong>
+            <section class="border-top left">
+                <h4>Submit a Modernist House For Sale or Rent</h4>
+                <p>
                     Write NCModernist volunteer Virginia Faust at				
                     <a class="hover-link" href="mailto:vafaust@gmail.com">vafaust@gmail.com</a>
                     with the following information:
                 </p>
                 <ul>
-                    <li class="left">
-                        <p class="left">Name of Original Homeowner, if known for sure (don't guess).</p>
-                    </li>
-                    <li class="left">
-                        <p class="left">Year House Completed, if known for sure (don't guess)</p>
+                    <li>
+                        <p>Name of Original Homeowner, if known for sure (don't guess).</p>
                     </li>
                     <li>
-                        <p class="left">Address (number, street, city, state, zip)</p>
+                        <p>Year House Completed, if known for sure (don't guess)</p>
                     </li>
                     <li>
-                        <p class="left">Original Architect's Name, if known for sure (don't guess). Same for the builder.</p>
+                        <p>Address (number, street, city, state, zip)</p>
                     </li>
                     <li>
-                        <p class="left">Current Homeowner Name and Phone Number (for us to ask historical questions if necessary)</p>
+                        <p>Original Architect's Name, if known for sure (don't guess). Same for the builder.</p>
                     </li>
                     <li>
-                        <p class="left">Sales/rental Price</p>
+                        <p>Current Homeowner Name and Phone Number (for us to ask historical questions if necessary)</p>
                     </li>
                     <li>
-                        <p class="left">MLS Link (if any), or Contact Info if For Sale By Owner. If not part of an MLS link, please attach photos, at least two of the inside and two from the outside.</p>
+                        <p>Sales/rental Price</p>
                     </li>
                     <li>
-                        <p class="left">Any other comments about the house, the architect, or house history.</p>
+                        <p>MLS Link (if any), or Contact Info if For Sale By Owner. If not part of an MLS link, please attach photos, at least two of the inside and two from the outside.</p>
+                    </li>
+                    <li>
+                        <p>Any other comments about the house, the architect, or house history.</p>
                     </li>
                 </ul>
-                <p>All submissions are subject to review and approval is not guaranteed.</p>
+                <p class="center">All submissions are subject to review and approval is not guaranteed.</p>
             </section>
          <!-- #EndEditable -->
         </div>
