--- a/pages/ldf.htm
+++ b/pages/ldf.htm
@@ -43,7 +43,7 @@ Design by: RTBWizards.com
                     <img height="73" src="https://katiewrennhansen.github.io/nc-modernist-redesign/images/nc_mod_logo.png" width="300">
                 </a>
             </div>
-            <div class="logo-subtext">Architecture You Love</div>
+            <div class="logo-subtext top-space">Architecture You Love</div>
         </div>
    <!-- ==== Main Navigation ==== -->
    <nav>
@@ -168,12 +168,8 @@ Design by: RTBWizards.com
                         <input alt="PayPal - The safer, easier way to pay online!" value="Donate" type="submit" />
                     </div>
                 </form>
-                <p>
-                    If giving by check, please mail to NCModernist, 5409 Pelham Road, Durham NC 27713 and mark LDF on the 
-                    memo. Contributions to the LDF are generally tax-deductible - please consult your tax professional.
-                </p>
+                <p>If giving by check, please mail to NCModernist, 5409 Pelham Road, Durham NC 27713 and mark LDF on the memo. Contributions to the LDF are generally tax-deductible - please consult your tax professional.</p>
             </section>
-
          <!-- #EndEditable -->
       </div>
    </div>
