--- a/pages/search.htm
+++ b/pages/search.htm
@@ -99,40 +99,31 @@ Design by: RTBWizards.com
    <div class="container pageTitle">
       <div class="inside">
          <!-- #BeginEditable "pagetitle" -->
-          <table cellpadding="3" cellspacing="3">
-			<tr>
 			<h1>Site Search</h1>
-
-				<td class="auto-style10"><span class="center">Tip: for a 
-				more specific search, put phrases in quotes. For example:
-				</span><br class="center" />
-				<br class="center" />
-				<span class="center">"brian shawcroft" architect glenwood</span><br class="center" />
-				</td>
-			</tr>
 			
 			<form class="form-inline">
-			<div class="form-group">
-
-<script>
-  (function() {
-    var cx = '017999698976765921126:h8j4r_mpgzg';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<gcse:search></gcse:search>
-</div>
-			</form>
-			</table>
+                <div class="form-group">
+                    <script>
+                    (function() {
+                        var cx = '017999698976765921126:h8j4r_mpgzg';
+                        var gcse = document.createElement('script');
+                        gcse.type = 'text/javascript';
+                        gcse.async = true;
+                        gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+                            '//cse.google.com/cse.js?cx=' + cx;
+                        var s = document.getElementsByTagName('script')[0];
+                        s.parentNode.insertBefore(gcse, s);
+                    })();
+                    </script>
+                    <gcse:search></gcse:search>
+                </div>
+            </form>
+            
+            <p>Tip: for a more specific search, put phrases in quotes. For example:</p>
+            <p>"brian shawcroft" architect glenwood</p>
          <!-- #EndEditable -->
-      </div>
-   </div>
+       </div>
+    </div>
 </div>
 <!-- ==== footer area ==== -->
 <footer>
