--- a/pages/search.htm
+++ b/pages/search.htm
@@ -14,6 +14,8 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One|Oswald:300" rel="stylesheet" type="text/css">
 <link href="https://katiewrennhansen.github.io/nc-modernist-redesign/css/default.css" media="screen" rel="stylesheet" type="text/css">
+<link href="https://katiewrennhansen.github.io/nc-modernist-redesign/css/search.css" media="screen" rel="stylesheet" type="text/css">
+<!-- <link href="file:///Users/kawrenn/Desktop/nc_modernist/css/search.css" media="screen" rel="stylesheet" type="text/css"> -->
 <!-- <link href="file:///Users/kawrenn/Desktop/nc_modernist/css/default.css" media="screen" rel="stylesheet" type="text/css"> -->
 <!-- <link href="css/css2/default.css" media="screen" rel="stylesheet" type="text/css"> -->
 <link href="css/css2/animate.css" media="screen" rel="stylesheet" type="text/css">
